--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         with a <link> tag that refers to 'styles.css'
       */
     </style>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
   </head>
   <body>
     <header>
